newsletter-sign-up-with-success-message/src/css/index.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");

/* ==========================
CSS Reset by Josh Comeau
============================= */

/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
* {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/*
    10. Create a root stacking context
  */
#root,
#__next {
  isolation: isolate;
}

/* ==========================
Main Styles
============================= */

:root {
  --red: hsl(4, 100%, 67%);

  --blue-800: hsl(234, 29%, 20%);
  --blue-700: hsl(235, 18%, 26%);
  --grey: hsl(0, 0%, 58%);
  --white: hsl(0, 0%, 100%);

  --fw-bold: 700;
}

body,
main,
section,
div {
  display: flex;
  flex-direction: column;
}

body {
  font-family: "Roboto", sans-serif;
  min-height: 100vh;
  color: var(--blue-800);
}

h1 {
  font-size: 2.5rem;
  font-weight: var(--fw-bold);
  line-height: 2.5rem;
}

@media (min-width: 768px) {
  body {
    background-color: var(--blue-700);
    padding: 1rem;
  }
}

@media (min-width: 1024px) {
  h1 {
    font-size: 3.5rem;
    line-height: 3.5rem;
  }
}

